# brain-sim-lib

./: .gitignore  README.md  pyproject.toml
docs/: brain-api-notes.md  brain-settings-and-datafields.md
examples/: README.md  Tutorial 0 - Start Here For Beginners.ipynb  Tutorial 1 - Excel Batch Alpha Simulation.ipynb  Tutorial 1 - Installation And Project Tour.ipynb  Tutorial 10 - Data Fields And Field Types.ipynb  Tutorial 2 - Login And Persona Verification.ipynb  Tutorial 3 - Excel Alpha Queue And Payloads.ipynb  Tutorial 4 - Live Excel Batch Simulation.ipynb  Tutorial 5 - Batch Fallback Timeouts And Retry Queue.ipynb  Tutorial 6 - Duplicate Cache And Re-Runs.ipynb  Tutorial 7 - Results Raw Logs And Recordsets.ipynb  Tutorial 8 - Python API Workflow.ipynb  Tutorial 9 - Simulation Settings Deep Dive.ipynb
examples/data/: tutorial_01_alphas.xlsx  tutorial_03_invalid_missing_expression.xlsx  tutorial_03_mixed_settings.xlsx  tutorial_04_live_alphas.xlsx  tutorial_05_fallback_alphas.xlsx  tutorial_06_duplicate_alphas.xlsx  tutorial_07_recordset_alphas.xlsx  tutorial_08_api_alphas.xlsx  tutorial_09_settings_examples.xlsx  tutorial_10_datafield_examples.xlsx
examples/expected/: tutorial_01_summary.csv  tutorial_04_live_offline_summary.csv  tutorial_05_fallback_summary.csv  tutorial_06_second_run_summary.csv  tutorial_07_recordset_summary.csv
tests/: conftest.py  test_auth.py  test_batch.py  test_cache.py  test_cli.py  test_client.py  test_examples.py  test_excel.py  test_knowledge_docs.py  test_payloads.py  test_results.py
tools/: build_tutorial_examples.py
(+13 files in other folders)
